python3: include python*-package.mk irespective of DUMP env var
Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python3/Makefile
+++ b/python3/Makefile
@@ -8,7 +8,7 @@
 include $(TOPDIR)/rules.mk
 
 # The file included below defines PYTHON_VERSION
--include $(if $(DUMP),,./files/python3-package.mk)
+include ./files/python3-package.mk
 
 PKG_NAME:=python3
 PKG_RELEASE:=1
