python: use libncursesw instead of libncurses
Python's build scripts prefer ncursesw, and if it is detected
it will be used.
The problem will occur when linking, since ncursesw libs may not be
installed if not added as deps, but the sources will be compiled
against ncursesw.

Reference from Python's HISTORY file:
  Patch #1428494: Prefer linking against ncursesw over ncurses library.

Signed-off-by: Alexandru Ardelean <ardeleanalex@gmail.com>

--- a/python/Makefile
+++ b/python/Makefile
@@ -126,13 +126,13 @@ endef
 define Package/python-readline
 $(call Package/python/Default)
  TITLE:=Python support for readline
- DEPENDS:=@PACKAGE_python +PACKAGE_python:python +libreadline +libncurses @BROKEN
+ DEPENDS:=@PACKAGE_python +PACKAGE_python:python +libreadline +libncursesw @BROKEN
 endef
 
 define Package/python-ncurses
 $(call Package/python/Default)
  TITLE:=Python support for readline
- DEPENDS:=@PACKAGE_python +PACKAGE_python:python +libncurses
+ DEPENDS:=@PACKAGE_python +PACKAGE_python:python +libncursesw
 endef
 
 MAKE_FLAGS:=\
